--- a/notebooks/02_camadas_adicionais.ipynb
+++ b/notebooks/02_camadas_adicionais.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "a725a838-9145-4a9a-9eec-e1cf584b1d9f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "e0229436-4f80-4c54-a5ab-bce911216a80",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "f70a73c3-7bef-4223-a4a9-917be83f9b24",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
        "[104 rows x 2 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "dd65b011-2611-4d83-a786-b88de9c9301b",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        " 'geometry']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "b9f81cda-7cc3-4b21-ad52-25346333dc36",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "1fec1881-1a6b-4fe2-b90a-1c761703129a",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "[104 rows x 3 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "88c3206c-34a7-4600-a94b-be36b200a67f",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
        "[104 rows x 4 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "f66918c3-4db3-4780-8b0c-f37cdcbcc758",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        "42  [gid, uuid_id, nome, nome_secundario, localiza...    None  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "8f770cf7-872f-4e88-a90d-d6618b060cba",
    "metadata": {},
    "outputs": [
@@ -709,7 +709,7 @@
        "42  [gid, uuid_id, nome, nome_secundario, localiza...     gid  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "03e6a6ad-dda1-454b-8890-aba7c6bdf727",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "4a81a27d-648d-47a2-9103-7c3776ee323c",
    "metadata": {},
    "outputs": [
@@ -841,7 +841,7 @@
        "gid                                     4                 4            4"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "ff432921-c74a-422c-a6e7-428a198e1096",
    "metadata": {},
    "outputs": [],
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "f8bc2832-ecdf-4ab2-8348-4f2402184e17",
    "metadata": {},
    "outputs": [],
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "936eb838-7f0d-4595-adb8-c62fa1cc6d8c",
    "metadata": {},
    "outputs": [
@@ -1070,7 +1070,7 @@
        "[104 rows x 5 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "4a535ab5-c6c6-47f9-882b-1ac6ce6e8a40",
    "metadata": {},
    "outputs": [],
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "f727d2d9-6126-4079-b35f-7effd1124bce",
    "metadata": {},
    "outputs": [
@@ -1312,7 +1312,7 @@
        "[104 rows x 6 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "eddc2291-9c7c-45fa-b432-5c4c60808748",
    "metadata": {},
    "outputs": [],
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "0081abb5-7e4b-4f93-b55b-487ac95b65bb",
    "metadata": {},
    "outputs": [],
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "49c9399d-daff-429a-a6ca-a8d7377c5e41",
    "metadata": {},
    "outputs": [],
@@ -1353,12 +1353,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "91b2a20a-78db-4575-be56-0063e6d53511",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.loc[df['camada_name'] == 'subprefeitura', 'predicate'] = 'largest_intersection'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Removendo camadas muito grandes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>camada_name</th>\n",
+       "      <th>features_camadas</th>\n",
+       "      <th>_properties</th>\n",
+       "      <th>_id_col</th>\n",
+       "      <th>renamed_columns</th>\n",
+       "      <th>id_col</th>\n",
+       "      <th>properties</th>\n",
+       "      <th>predicate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [camada_name, features_camadas, _properties, _id_col, renamed_columns, id_col, properties, predicate]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df[df['camada_name'] != 'arvore']\n",
+    "df = df[df['camada_name'] != 'calcada']\n",
+    "df = df[df['camada_name'] != 'segmento_logradouro']\n",
+    "df\n"
    ]
   },
   {
