Começar a testar o intersec unidades

--- a/streamlit-pmsb/streamlit_testes.ipynb
+++ b/streamlit-pmsb/streamlit_testes.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-28 09:02:54.197 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+      "2025-01-28 10:13:40.831 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
      ]
     }
    ],
@@ -360,15 +360,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "691e1934-3633-4bfa-b81c-72546659b139",
+   "execution_count": 14,
+   "id": "e57d6764-7e8d-4173-9069-3deb366e4ba6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cd_fcu</th>\n",
+       "      <th>nm_fcu</th>\n",
+       "      <th>pop_fcu</th>\n",
+       "      <th>dom_fcu</th>\n",
+       "      <th>con_fcu</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>cd_identif</th>\n",
+       "      <th>cd_subpref</th>\n",
+       "      <th>cd_distrit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>899</th>\n",
+       "      <td>35503082235</td>\n",
+       "      <td>Jardim Pery - Praça Henrique Yuaso</td>\n",
+       "      <td>191</td>\n",
+       "      <td>86</td>\n",
+       "      <td>26740</td>\n",
+       "      <td>POLYGON ((330825.162 7404338.413, 330825.09 74...</td>\n",
+       "      <td>738</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>885</th>\n",
+       "      <td>35503080956</td>\n",
+       "      <td>Ascenso Fernandes</td>\n",
+       "      <td>254</td>\n",
+       "      <td>86</td>\n",
+       "      <td>35560</td>\n",
+       "      <td>POLYGON ((354688.187 7402144.899, 354632.766 7...</td>\n",
+       "      <td>716</td>\n",
+       "      <td>23</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>35503082232</td>\n",
+       "      <td>Morro das Pedras</td>\n",
+       "      <td>153</td>\n",
+       "      <td>50</td>\n",
+       "      <td>21420</td>\n",
+       "      <td>POLYGON ((351735.379 7385427.454, 351656.155 7...</td>\n",
+       "      <td>645</td>\n",
+       "      <td>30</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          cd_fcu                              nm_fcu  pop_fcu  dom_fcu  \\\n",
+       "899  35503082235  Jardim Pery - Praça Henrique Yuaso      191       86   \n",
+       "885  35503080956                   Ascenso Fernandes      254       86   \n",
+       "343  35503082232                    Morro das Pedras      153       50   \n",
+       "\n",
+       "     con_fcu                                           geometry cd_identif  \\\n",
+       "899    26740  POLYGON ((330825.162 7404338.413, 330825.09 74...        738   \n",
+       "885    35560  POLYGON ((354688.187 7402144.899, 354632.766 7...        716   \n",
+       "343    21420  POLYGON ((351735.379 7385427.454, 351656.155 7...        645   \n",
+       "\n",
+       "    cd_subpref cd_distrit  \n",
+       "899          4         13  \n",
+       "885         23         44  \n",
+       "343         30         75  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_unidade.sample(3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "89cfbb63-9d86-4280-8739-581eebc6a422",
    "metadata": {},
    "outputs": [
@@ -381,7 +478,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "c2d83aa7-d68c-4022-94d9-443e757bd367",
    "metadata": {},
    "outputs": [
@@ -415,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "9c894e93",
    "metadata": {},
    "outputs": [],
@@ -425,10 +522,11 @@
     "    unidades_df,\n",
     "    choice_unidade,\n",
     "    gdf_unidade,\n",
+    "    name_gdf_unidade,\n",
     "    name_column_unidade\n",
     ")-> gpd.GeoDataFrame:\n",
     "\n",
-    "    gdf_unidade = create_gdf_sorted(gdf=gdf_unidade, name_gdf=choice_unidade)\n",
+    "    gdf_unidade = gdf_operations.create_gdf_sorted(gdf=gdf_unidade, name_gdf=choice_unidade)\n",
     "    index_unidade = (\n",
     "        unidades_df[\n",
     "            unidades_df['name'] == choice_unidade\n",
@@ -439,23 +537,130 @@
     "    \n",
     "    for i, row in unidades_df.iterrows():\n",
     "        if i< index_unidade:\n",
-    "            polenta = overlay_intersec(unidades_df, choice_unidade, gdf_unidade, name_column_unidade)\n",
-    "            return polenta\n",
-    "\n"
+    "            name_gdf_intersec = row.loc['gdf_name']\n",
+    "            cd_intersec = row.loc['column_cd']\n",
+    "            overlay_gdf = gdf_operations.overlay_intersec(\n",
+    "                name_gdf_intersec,\n",
+    "                gdf_unidade,\n",
+    "                name_gdf_unidade\n",
+    "            )\n",
+    "            gdf_unidade[cd_unidade] = gdf_unidade[cd_unidade].astype(str)\n",
+    "            overlay_gdf[cd_intersec] = overlay_gdf[cd_intersec].astype(int).astype(str)\n",
+    "            overlay_gdf[cd_unidade] = overlay_gdf[cd_unidade].astype(str)\n",
+    "\n",
+    "\n",
+    "            gdf_unidade = pd.merge(gdf_unidade, overlay_gdf[[cd_unidade, cd_intersec]], on=cd_unidade, how='left')\n",
+    "\n",
+    "\n",
+    "    gdf_operations.save_intersec(gdf_unidade, choice_unidade)\n",
+    "\n",
+    "    return gdf_unidade\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "771d57db-5d36-4540-9c94-24a3e74e3f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\x526378\\Desktop\\projetos\\saneamento\\hydra\\streamlit-pmsb\\utils\\gdf_operations.py:132: FutureWarning: You are adding a column named 'geometry' to a GeoDataFrame constructed without an active geometry column. Currently, this automatically sets the active geometry column to 'geometry' but in the future that will no longer happen. Instead, either provide geometry to the GeoDataFrame constructor (GeoDataFrame(... geometry=GeoSeries()) or use `set_geometry('geometry')` to explicitly set the active geometry column.\n",
+      "  gdf_sorted[column] = gdf[column]\n"
+     ]
+    }
+   ],
+   "source": [
+    "intersec_subbac = intersec_unidades(\n",
+    "    unidades_df, 'Sub Bacias Hidrográficas', subbac, 'subbac', nm_subbac)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "36b38cbd-5b03-4d8a-ba97-399b226ba293",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pop_total</th>\n",
+       "      <th>dom_total</th>\n",
+       "      <th>consumo_di</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>7627</td>\n",
+       "      <td>4020</td>\n",
+       "      <td>1067780</td>\n",
+       "      <td>POLYGON ((330407.467 7398384.592, 330412.123 7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>58262</td>\n",
+       "      <td>23666</td>\n",
+       "      <td>8156680</td>\n",
+       "      <td>POLYGON ((320488.821 7380482.979, 320497.87 73...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>11885</td>\n",
+       "      <td>4581</td>\n",
+       "      <td>1663900</td>\n",
+       "      <td>POLYGON ((357868.637 7402594.8, 357873.293 740...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     pop_total  dom_total  consumo_di  \\\n",
+       "158       7627       4020     1067780   \n",
+       "66       58262      23666     8156680   \n",
+       "219      11885       4581     1663900   \n",
+       "\n",
+       "                                              geometry  \n",
+       "158  POLYGON ((330407.467 7398384.592, 330412.123 7...  \n",
+       "66   POLYGON ((320488.821 7380482.979, 320497.87 73...  \n",
+       "219  POLYGON ((357868.637 7402594.8, 357873.293 740...  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intersec_subbac.sample(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "771d57db-5d36-4540-9c94-24a3e74e3f1d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36b38cbd-5b03-4d8a-ba97-399b226ba293",
+   "id": "75d5deeb-aa80-41aa-81d8-5775029d4d2f",
    "metadata": {},
    "outputs": [],
    "source": []
