Testar intersec distrito

--- a/streamlit-pmsb/streamlit_testes.ipynb
+++ b/streamlit-pmsb/streamlit_testes.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-29 15:06:50.508 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+      "2025-01-29 15:35:24.989 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
      ]
     }
    ],
@@ -292,23 +292,6 @@
       "D:\\Documentos_Novo\\ADPPSP\\2024\\Saneamento básico\\PMSB\\hydra\\streamlit-pmsb\\utils\\gdf_operations.py:122: FutureWarning: You are adding a column named 'geometry' to a GeoDataFrame constructed without an active geometry column. Currently, this automatically sets the active geometry column to 'geometry' but in the future that will no longer happen. Instead, either provide geometry to the GeoDataFrame constructor (GeoDataFrame(... geometry=GeoSeries()) or use `set_geometry('geometry')` to explicitly set the active geometry column.\n",
       "  gdf_sorted['geometry'] = gdf['geometry']\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['cd_fcu', 'nm_fcu', 'pop_fcu', 'dom_fcu', 'con_fcu', 'cd_identif',\n",
-      "       'nm_bacia_h', 'geometry', 'area'],\n",
-      "      dtype='object')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Documentos_Novo\\ADPPSP\\2024\\Saneamento básico\\PMSB\\hydra\\streamlit-pmsb\\utils\\gdf_operations.py:122: FutureWarning: You are adding a column named 'geometry' to a GeoDataFrame constructed without an active geometry column. Currently, this automatically sets the active geometry column to 'geometry' but in the future that will no longer happen. Instead, either provide geometry to the GeoDataFrame constructor (GeoDataFrame(... geometry=GeoSeries()) or use `set_geometry('geometry')` to explicitly set the active geometry column.\n",
-      "  gdf_sorted['geometry'] = gdf['geometry']\n"
-     ]
     }
    ],
    "source": [
@@ -338,8 +321,16 @@
     "            print(overlay_gdf.columns)\n",
     "            \n",
     "            gdf_unidade[cd_unidade] = gdf_unidade[cd_unidade].astype(str)\n",
-    "            overlay_gdf[cd_intersec] = overlay_gdf[cd_intersec].astype(int).astype(str)\n",
-    "            overlay_gdf[cd_unidade] = overlay_gdf[cd_unidade].astype(str)\n",
+    "            overlay_gdf[cd_intersec] =(\n",
+    "                overlay_gdf[cd_intersec]\n",
+    "                .astype(int)\n",
+    "                .astype(str)\n",
+    "            )\n",
+    "            \n",
+    "            overlay_gdf[cd_unidade] = (\n",
+    "                overlay_gdf[cd_unidade]\n",
+    "                .astype(str)\n",
+    "            )\n",
     "\n",
     "\n",
     "            gdf_unidade = pd.merge(gdf_unidade, overlay_gdf[[cd_unidade, cd_intersec]], on=cd_unidade, how='left')\n",
@@ -389,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bc12e76",
+   "id": "f9a3a271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cda8005",
+   "id": "9aed9bd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +456,8 @@
     "        name_gdf_unidade\n",
     "    )\n",
     "\n",
+    "    gdf_unidade= gdf_sorted\n",
+    "\n",
     "    name_column_unidade = gdf_operations.find_gdf_name(\n",
     "        gdf_unidade, name_gdf_unidade, 'nm_'\n",
     "    )\n",
@@ -490,11 +483,13 @@
     "        if i< index_unidade:\n",
     "            name_gdf_intersec = row.loc['gdf_name']\n",
     "            cd_intersec = row.loc['column_cd']\n",
+    "            \n",
     "            overlay_gdf = gdf_operations.overlay_intersec(\n",
     "                name_gdf_intersec= name_gdf_intersec, \n",
     "                gdf_unidade = gdf_unidade, \n",
     "                name_gdf_unidade=name_gdf_unidade\n",
     "            )\n",
+    "\n",
     "            \n",
     "            gdf_unidade[cd_unidade] = (\n",
     "                gdf_unidade[cd_unidade].astype(str)\n",
@@ -507,6 +502,8 @@
     "            overlay_gdf[cd_unidade] = (\n",
     "                overlay_gdf[cd_unidade].astype(str)\n",
     "            )\n",
+    "\n",
+    "    \n",
     "\n",
     "\n",
     "            gdf_unidade = pd.merge(\n",
@@ -524,13 +521,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "771d57db-5d36-4540-9c94-24a3e74e3f1d",
+   "cell_type": "markdown",
+   "id": "fea10b8e-ec08-4ffb-9c6e-f6ba07c911e6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "intersec_fcu = intersec_unidades(unidades_df, fcu, 'fcu')"
+    "intersec_fcu = intersec_unidades(unidades_df, fcu, 'fcu')\n",
+    "intersec_fcu.sample(3)"
    ]
   },
   {
@@ -539,9 +535,34 @@
    "id": "75d5deeb-aa80-41aa-81d8-5775029d4d2f",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7477087b-5a85-40e2-862e-15d304e767e1",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "intersec_fcu.sample()"
+    "intersec_distrito = intersec_unidades(unidades_df, distrito, 'distrito')\n",
+    "intersec_distrito.sample(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9b9d4ad-6c5d-415d-bd5a-bdc70607552f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a50714dc-7f45-441c-87e0-6c58ae1ca5fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
